@@ -1,5 +1,5 @@
 /*
- * Copyright 2011-2017 the original author or authors.
+ * Copyright 2011-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,8 @@ package org.glowroot.agent.weaving;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.security.CodeSigner;
@@ -24,24 +26,18 @@ import java.security.CodeSource;
 import java.security.ProtectionDomain;
 import java.util.Map;
 
-import javax.annotation.Nullable;
-
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Maps;
 import com.google.common.io.Resources;
 import com.google.common.reflect.Reflection;
 import org.checkerframework.checker.nullness.qual.MonotonicNonNull;
+import org.checkerframework.checker.nullness.qual.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import org.glowroot.agent.api.Glowroot;
-import org.glowroot.agent.impl.OptionalThreadContextImpl;
-import org.glowroot.agent.impl.ServiceRegistryImpl;
-import org.glowroot.agent.impl.ThreadContextImpl;
-import org.glowroot.agent.impl.TransactionRegistry;
-import org.glowroot.agent.impl.TransactionServiceImpl;
-import org.glowroot.agent.model.ThreadContextPlus;
-import org.glowroot.agent.plugin.api.util.FastThreadLocal;
+import org.glowroot.agent.bytecode.api.Bytecode;
+import org.glowroot.agent.plugin.api.Agent;
 import org.glowroot.common.util.OnlyUsedByTests;
 
 // the placement of this code in the main Glowroot code base (and not inside of the tests folder) is
@@ -89,7 +85,8 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
     public <S, T extends S> S newInstance(Class<T> implClass, Class<S> bridgeClass)
             throws Exception {
         validateBridgeable(bridgeClass.getName());
-        return bridgeClass.cast(loadClass(implClass.getName()).newInstance());
+        return bridgeClass
+                .cast(loadClass(implClass.getName()).getDeclaredConstructor().newInstance());
     }
 
     @Override
@@ -150,7 +147,28 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
         byte[] wovenBytes = weaveClass(name, bytes);
         String packageName = Reflection.getPackageName(name);
         if (!packages.containsKey(packageName)) {
-            Package pkg = definePackage(packageName, null, null, null, null, null, null, null);
+            Method getDefinedPackageMethod;
+            try {
+                getDefinedPackageMethod = getClass().getMethod("getDefinedPackage", String.class);
+            } catch (NoSuchMethodException e) {
+                getDefinedPackageMethod = null;
+            }
+            Package pkg;
+            if (getDefinedPackageMethod == null) {
+                pkg = definePackage(packageName, null, null, null, null, null, null, null);
+            } else {
+                // Java 9
+                try {
+                    pkg = (Package) getDefinedPackageMethod.invoke(this, packageName);
+                    if (pkg == null) {
+                        pkg = definePackage(packageName, null, null, null, null, null, null, null);
+                    }
+                } catch (IllegalAccessException e) {
+                    throw new RuntimeException(e);
+                } catch (InvocationTargetException e) {
+                    throw new RuntimeException(e);
+                }
+            }
             packages.put(packageName, pkg);
         }
         if (codeSource == null) {
@@ -170,7 +188,7 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
             inWeaving.set(true);
             try {
                 byte[] wovenBytes =
-                        weaver.weave(bytes, ClassNames.toInternalName(name), null, this);
+                        weaver.weave(bytes, ClassNames.toInternalName(name), null, null, this);
                 if (wovenBytes == null) {
                     return bytes;
                 } else {
@@ -199,29 +217,24 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
         if (isInBootstrapClassLoader(name)) {
             return true;
         }
-        // this is needed to prevent these thread locals retaining the IsolatedWeavingClassLoader
-        // and causing PermGen OOM during maven test
-        if (name.equals(FastThreadLocal.class.getName())
-                || name.equals(FastThreadLocal.class.getName() + "$Holder")) {
+        if (name.startsWith("java.")) {
+            // in Java 9, some java packages are no longer in the bootstrap class loader, but still
+            // need to load with parent class loader in order to avoid SecurityException "Prohibited
+            // package name"
             return true;
         }
-        if (name.equals(Glowroot.class.getName())) {
+        if (name.equals(Glowroot.class.getName())
+                || name.equals(Agent.class.getName())
+                || name.equals(Bytecode.class.getName())
+                || name.equals(org.glowroot.agent.plugin.api.util.ImmutableList.class.getName())
+                || name.equals(org.glowroot.agent.plugin.api.util.ImmutableMap.class.getName())
+                || name.equals(org.glowroot.agent.plugin.api.util.ImmutableSet.class.getName())
+                || name.equals(Beans.class.getName())) {
             return false;
         }
-        // these are the classes that plugins depend on, either directly (api classes) or indirectly
-        // (weaving)
         if (name.startsWith("org.glowroot.agent.api.")
                 || name.startsWith("org.glowroot.agent.plugin.api.")
-                || name.startsWith("org.glowroot.agent.weaving.GeneratedAdvice")
-                || name.startsWith("org.glowroot.agent.weaving.GeneratedMethodMeta")
-                || name.equals(OptionalThreadContextImpl.class.getName())
-                || name.equals(ServiceRegistryImpl.class.getName())
-                || name.equals(ThreadContextImpl.class.getName())
-                || name.equals(ThreadContextPlus.class.getName())
-                || name.equals(TransactionRegistry.class.getName())
-                || name.equals(TransactionRegistry.TransactionRegistryHolder.class.getName())
-                || name.equals(TransactionServiceImpl.class.getName())
-                || name.equals(TransactionServiceImpl.TransactionServiceHolder.class.getName())) {
+                || name.startsWith("org.glowroot.agent.bytecode.api.")) {
             return true;
         }
         return false;
